--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                     </li>
                     <li>
                         <strong>Certificate in Python </strong> - University of Moratuwa ( October 2024)<br>
-                        <a href="python.pdf" target="_blank" class="certificate-btn">View Certificate</a>
+                        <a href="mahmoothpy.pdf" target="_blank" class="certificate-btn">View Certificate</a>
                     </li>
                     
                 </ul>
