--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 
                 <h2>MAHMOOTH<br>HUSSAIN</h2>
                 <div class="profile-img">
-                    <img src="mahmooth.png" alt="Mahmooth hussain">
+                    <img src="mahmooth.jpg" alt="Mahmooth hussain">
                 </div>
                 
             </div>
